--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.4.1",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
