--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "swiper": "^9.4.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
+    "vanilla-tilt": "^1.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
